# Forge-Kinetics

./: .cursorrules  .env.example  .gitignore  FORGE_CODING_PROMPT.md  README.md  package.json  pyproject.toml  requirements.txt
.github/agents/: CLAUDE.md  forge-orchestrator.agent.md
forge/: __init__.py
forge-features/: FEATURES.md
forge-memory/: AGENTS.md  API_CONTRACTS.md  ARCHITECTURE.md  CONSTRAINTS.md  DECISIONS.md  NOW.md  PROJECT_INDEX.md  ROADMAP.md  SYSTEM_PROMPT.md  TECH_STACK.md
forge/agents/: __init__.py  architect.py  backend.py  base.py  critic.py  design.py  devops.py  docs.py  finops.py  frontend.py  maintenance.py  ml_agent.py  pm_agent.py  research.py  security.py  testing.py
forge/api/: __init__.py  main.py
forge/core/: __init__.py  graph.py  runtime.py  state.py
forge/finops/: __init__.py  tracker.py
forge/hitl/: __init__.py  gate.py  payload.py
forge/mail/: __init__.py  receiver.py
forge/memory/: __init__.py  archival.py  compressor.py  core.py  knowledge_graph.py  log.py  recall.py
forge/platform/: __init__.py  white_label.py
forge/rag/: __init__.py  codebase.py  collective_brain.py  differential_privacy.py  domain.py
forge/sandbox/: __init__.py  e2b_runtime.py  git_transport.py
forge/scheduler/: __init__.py  tasks.py  workers.py
forge/skills/: __init__.py  loader.py  registry.py
infra/: docker-compose.yml
platform/: middleware.ts  package.json  tailwind.config.ts  tsconfig.json
scripts/: approve_hitl.py  seed_skills.py  setup.sh  test_pipeline.py
stages/: STAGES_5_TO_10.md  STAGE_1_CORE_SCAFFOLD.md  STAGE_2_PM_ARCHITECT.md  STAGE_3_BUILD_AGENTS.md  STAGE_4_QUALITY_AGENTS.md
stitch-downloads/: README.md  download-with-curl.ps1  screens.csv
(+94 files in other folders)
