[tool.poetry]
name = "forge"
version = "1.0.0"
description = "Autonomous AI Software Development Platform"
authors = ["Preetham <preetham@forge.dev>"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"

# Orchestration
langgraph = ">=0.2.0"
langchain = ">=0.3.0"
langchain-anthropic = ">=0.1.0"
langsmith = ">=0.1.0"
dspy-ai = ">=2.0.0"

# LLMs
anthropic = ">=0.30.0"
google-generativeai = ">=0.8.0"
google-adk = ">=1.0.0"
litellm = ">=1.0.0"
openai = ">=1.0.0"

# Agent output validation
pydantic = ">=2.0.0"
pydantic-ai = ">=0.0.1"

# Memory & RAG
llama-index = ">=0.10.0"
llama-index-vector-stores-chroma = "*"
chromadb = ">=0.5.0"
pinecone-client = ">=3.0.0"
neo4j = ">=5.0.0"
graphiti-core = ">=0.1.0"
mem0ai = ">=0.1.0"
redis = {extras = ["hiredis"], version = ">=5.0.0"}

# Sandbox execution
e2b-code-interpreter = ">=0.19.0"

# Platform backend
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.29.0"}
httpx = ">=0.27.0"
stripe = ">=9.0.0"

# Observability
sentry-sdk = {extras = ["fastapi"], version = ">=2.0.0"}
opentelemetry-api = ">=1.24.0"
opentelemetry-sdk = ">=1.24.0"

# Utilities
python-dotenv = ">=1.0.0"
pyyaml = ">=6.0"
rich = ">=13.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=5.0.0"
black = ">=24.0.0"
ruff = ">=0.4.0"
mypy = ">=1.9.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
